--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         display: flex;
         font-family: sans-serif;
         font-size: 18pt;
-        color: #ff5757;
+        color: #000000
         padding: 5px;
         border: 1px solid #ffffff;
         justify-content: left;
@@ -58,11 +58,11 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'good morning, your name.  ';
+        greet = 'good morning, xin.  ';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon, your name. ';
+        greet = 'good afternoon, xin;
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'good evening, your name.  ';
+        greet = 'good evening,  xin ';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
